--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "marked-smartypants-lite": "^1.0.3",
     "marked-subsuper-text": "^1.0.3",
     "markedLegacy": "npm:marked@^0.3.19",
+    "mermaid": "9.4.0",
     "moment": "^2.30.1",
     "mongoose": "^8.13.0",
     "nanoid": "5.1.5",
